MP-3121 icons sizes and  alignments fixed

--- a/ui.frontend/src/main/webpack/components/content/core-card/v1/card/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-card/v1/card/style.scss
@@ -3,11 +3,16 @@
 
 /* Style overirde for font-awesome icon fixes */ 
 .card {
-    .sl-link {
+    .avatar-link,
+    .cta-container,
+    .link-container {
         .svg-inline--fa {
             width: 24px !important;
             height: 24px !important;
             margin-bottom: -5px;
+        }
+        .fa-file-pdf {
+            padding: 3.75px;
         }
     }
     .content-container {
@@ -138,14 +143,6 @@
     &.banner-image-block-left,
     &.banner-image-block-right {
       .card-body {
-
-        .sl-link {
-            .svg-inline--fa {
-                width: 24px !important;
-                height: 24px !important;
-                margin-bottom: -4px;
-            }
-        }
         .card-text {
             &:has(.caption-text) {
                 p {
