--- a/ui.frontend/src/main/webpack/components/content/core-hero-banner/v1/hero-banner/style.scss
+++ b/ui.frontend/src/main/webpack/components/content/core-hero-banner/v1/hero-banner/style.scss
@@ -21,11 +21,19 @@
     }
 
     &.default .card-img-overlay {
-        .neutral a, .bright a, .dark a {
+        .neutral a.sl-link, .bright a.sl-link, .dark a.sl-link {
             & > .svg-inline--fa {
-            padding: 3.95px;
-            margin-bottom: -5px !important;
-            margin: 0 0 0 4px;
+                height: 24px;
+                width: 24px;
+                padding: 3.7px;
+                vertical-align: -7px;
+                margin: 0 0 0 4px;
+            }
+        }
+
+        .neutral a.sl-btn, .bright a.sl-btn, .dark a.sl-btn {
+            & > .svg-inline--fa {
+               vertical-align: -4px;
             }
         }
 
